--- a/appspec.json
+++ b/appspec.json
@@ -7,5 +7,12 @@
       "type": "STRING",
       "defaultValue": "+proj=moll +lon_0=0 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs"
     }
-  ]
+  ],
+  "dependencies": {
+    "R": [
+      {
+        "name": "move"
+      }
+    ]
+  }
 }
