--- a/appspec.json
+++ b/appspec.json
@@ -22,24 +22,16 @@
   "keywords": [
     "projection",
     "location",
-	"CRS"
+    "CRS"
   ],
   "people": [
     {
-      "firstName": "Clemens",
-	  "middleInitials": null,
-      "lastName": "Hahn",
-      "email": "clemens@couchbits.com",
-      "roles": ["author", "creator", "maintainer"],
-      "affiliation": "couchbits GmbH"
-    },
-    {
-      "firstName": "Andrea",
-      "middleInitials": null,
-      "lastName": "Kölzsch",
-      "email": "akoelzsch@ab.mpg.de",
-      "roles": ["contributor", "reviewer"],
-      "orcid": "0000-0003-0193-1563",
+      "firstName": "Anne",
+      "middleInitials": "K",
+      "lastName": "Scharf",
+      "email": "ascharf@ab.mpg.de",
+      "roles": ["author", "creator"],
+      "orcid": null,
       "affiliation": "Max-Planck-Institute of Animal Behavior",
       "affiliationRor": "https://ror.org/026stee22"
     }
