--- a/appspec.json
+++ b/appspec.json
@@ -3,7 +3,7 @@
     {
       "id": "projection",
       "name": "Projection",
-      "description": "Define the projection you want to transform your data into.",
+      "description": "Define the projection you want to transform your data into. It can be in a EPGS (e.g.: EPSG:4978), ESRI (e.g.: ESRI:54009) or Proj.4 format (e.g.: +proj=moll +ellps=WGS84).Do NOT place quotes around the projection name.",
       "type": "STRING",
       "defaultValue": null
     }
@@ -31,7 +31,7 @@
       "lastName": "Scharf",
       "email": "ascharf@ab.mpg.de",
       "roles": ["author", "creator"],
-      "orcid": null,
+      "orcid": "0000-0002-3357-8533",
       "affiliation": "Max-Planck-Institute of Animal Behavior",
       "affiliationRor": "https://ror.org/026stee22"
     }
