--- a/appspec.json
+++ b/appspec.json
@@ -1,4 +1,5 @@
 {
+  "version":"1.1",
   "settings": [
     {
       "id": "projection",
@@ -74,8 +75,5 @@
       "affiliation": "Max-Planck-Institute of Animal Behavior",
       "affiliationRor": "https://ror.org/026stee22"
     }
-  ],
-  "documentation" : {
-    "url": "https://github.com/movestore/change-projection/blob/master/README.md"
-  }
+  ]
 }
